src/libqbindingstorage.h

#pragma once
#ifndef SRCC_LIBQBINDINGSTORAGE_H
#define SRCC_LIBQBINDINGSTORAGE_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __GNUC__
#pragma GCC diagnostic ignored "-Wdeprecated-declarations"
#endif

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QBindingStatus QBindingStatus;
typedef struct QBindingStorage QBindingStorage;
typedef struct QUntypedPropertyData QUntypedPropertyData;
#endif

QBindingStatus* QBindingStatus_new(QBindingStatus* other);
QBindingStatus* QBindingStatus_new2(QBindingStatus* other);
void QBindingStatus_CopyAssign(QBindingStatus* self, QBindingStatus* other);
void QBindingStatus_MoveAssign(QBindingStatus* self, QBindingStatus* other);
void QBindingStatus_Delete(QBindingStatus* self);

QBindingStorage* QBindingStorage_new();
bool QBindingStorage_IsEmpty(QBindingStorage* self);
bool QBindingStorage_IsValid(const QBindingStorage* self);
void QBindingStorage_RegisterDependency(const QBindingStorage* self, QUntypedPropertyData* data);
void QBindingStorage_Delete(QBindingStorage* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif